Release (2011-04-15)
------------------------------------
* 增加remove函数中对beforeremove事件结果的判断
* 修改breforeCreate事件的触发参数

Release (2011-04-14)
------------------------------------
* Grid的Column上增加forExport属性，用于导出功能。
* 修改radio的图片
* 修正numbeField的maxLength错误
* Grid的Column上增加exportField属性，用于导出功能。
* 修订grid新增数据无法选中的问题
* 修改DataSet中create函数的breforeCreate事件
* DataSet增加beforeLoadData函数,用于预处理数据
* DataSet增加了validateSelf函数,用于校验dataset本身,不包含子dataset

Release (2011-04-13)
------------------------------------
* 将组件的加载js修改为xxx-min.js
* 增加了导出的客户端脚本